# projeto_streamlit_python

./: Cadastro.py  README.md  cliente.csv  pyproject.toml
pages/: Consulta.py
