[tool.poetry]
name = "projeto pratico"
version = "0.1.0"
description = ""
authors = ["Marcio Diniz <106413193+MarcioDinizz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
